--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
 
         function handleStart(e) {
           //e.preventDefault();
-          alert('touchstart');
+          log.textContent = 'touchstart';
           var elem = document.getElementsByTagName('canvas')[0];
           var ctx = elem.getContext('2d');
           var touches = e.changedTouches;
           for (var i = 0; i < touches.length; i++) {
-            alert("touchstart: " + i + " ...");
+            log.textContent = "touchstart: " + i + " ...";
             ongoingTouches.push(copyTouch(touches[i]));
             var color = colorForTouch(touches[i]);
             ctx.beginPath();
             ctx.arc(touches[i].pageX, touches[i].pageY, 4, 0, 2 * Math.PI, false);
             ctx.fillStyle = color;
             ctx.fill();
-            alert('touchstart: ' + i + '.');
+            log.textContent = 'touchstart: ' + i + '.';
           }
         }
 
