--- a/index.html
+++ b/index.html
@@ -65,16 +65,40 @@
         }
 
         function handleEnd(e) {
-          
+          e.preventDefault();
+          log('touchend');
+          var elem = document.getElementsByTagName('canvas')[0];
+          var ctx = elem.getContext('2d');
+          var touches = e.changedTouches;
+          for (var i = 0; i < touches.length; i++) {
+            var color = colorForTouch(touches[i]);
+            var idx = ongoingTouchIndexById(touches[i].identifier);
+            if (idx >= 0) {
+              ctx.lineWidth = 4;
+              ctx.fillStyle = color;
+              ctx.beginPath();
+              ctx.moveTo(ongoingTouches[idx].pageX, ongoingTouches[idx].pageY);
+              ctx.lineTo(touches[i].pageX, touches[i].pageY);
+              ctx.fillRect(touches[i].pageX - 4, touches[i].pageY - 4, 8, 8);
+              ongoingTouches.splice(idx, 1); // remove it, we're done;
+            } else {
+              log('can not figure out which touch to end');
+            }
+          }
         }
 
         function handleCancel(e) {
-          
+          e.preventDefault();
+          log('touchcanel');
+          var touches = e.changedTouches;
+          for (var i = 0; i < touches.length; i++) {
+            ongoingTouches[i].splice(i, 1); // remove it, we're done
+          }
         }
 
         function handleMove(e) {
           e.preventDefault();
-          var elem = document.getElementById('canva')[0];
+          var elem = document.getElementsByTagName('canvas')[0];
           var ctx = elem.getContext('2d');
           var touches = e.changedTouches;
           for (var i = 0; i < touches.length; i++) {
