remove log element

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         //   document.getElementById('number').textContent = e.data;
         // }
 
-        var log = document.getElementById('log');
+        //var log = document.getElementById('log');
         var init = document.getElementById('init');
         init.onclick = function () {
           startup();
