--- a/index.html
+++ b/index.html
@@ -64,6 +64,32 @@
           }
         }
 
+        function handleMove(e) {
+          e.preventDefault();
+          var elem = document.getElementsByTagName('canvas')[0];
+          var ctx = elem.getContext('2d');
+          var touches = e.changedTouches;
+          for (var i = 0; i < touches.length; i++) {
+            var color = colorForTouch(touches[i]);
+            var idx = ongoingTouchIndexById(touches[i].identifier);
+            if (idx >= 0) {
+              log('continuing touch' + idx);
+              ctx.beginPath;
+              log('ctx.moveTo(' + ongoingTouches[idx].pageX + ', ' + ongoingTouches[idx].pageY + ');');
+              ctx.moveTo(ongoingTouches[idx].pageX, ongoingTouches[idx].pageY);
+              log('ctx.lineTo(' + touches[i].pageX + ', ' + touches[i].pageY + ');');
+              ctx.lineTo(touches[i].pageX, touches[i].pageY);
+              ctx.lineWidth = 4;
+              ctx.strokeStyle = color;
+              ctx.stroke();
+              ongoingTouches.splice(idx, 1, copyTouch(touches[i])); // swap in the new touch record
+              log('.');
+            } else {
+              log('can not figure out which touch to continue');
+            }
+          }
+        }
+
         function handleEnd(e) {
           e.preventDefault();
           log('touchend');
@@ -93,32 +119,6 @@
           var touches = e.changedTouches;
           for (var i = 0; i < touches.length; i++) {
             ongoingTouches[i].splice(i, 1); // remove it, we're done
-          }
-        }
-
-        function handleMove(e) {
-          e.preventDefault();
-          var elem = document.getElementsByTagName('canvas')[0];
-          var ctx = elem.getContext('2d');
-          var touches = e.changedTouches;
-          for (var i = 0; i < touches.length; i++) {
-            var color = colorForTouch(touches[i]);
-            var idx = ongoingTouchIndexById(touches[i].identifier);
-            if (idx >= 0) {
-              log('continuing touch' + idx);
-              ctx.beginPath();
-              log('ctx.moveTo(' + ongoingTouches[idx].pageX + ', ' + ongoingTouches[idx].pageY + ');');
-              ctx.moveTo(ongoingTouches[idx].pageX, ongoingTouches[idx].pageY);
-              log('ctx.lineTo(' + touches[i].pageX + ', ' + touches[i].pageY + ');');
-              ctx.lineTo(touches[i].pageX, touches[i].pageY);
-              ctx.lineWidth = 4;
-              ctx.strokeStyle = color;
-              ctx.stroke();
-              ongoingTouches.splice(idx, 1, copyTouch(touches[i])); // swap in the new touch record
-              log('.');
-            } else {
-              log('can not figure out which touch to continue');
-            }
           }
         }
 
