--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     Log: <pre id="log" style="border: 1px solid #ccc;"></pre>
 
         <!-- <script src="jquery-3.1.1.min.js" type="text/javascript"></script> -->
-    <script>
+    <script type="text/javascript">
       // $(function(){
       //   $("#t1").animate({left: "200px"}, 2000).animate({left: "2px"}, 2000);      
       //   $("#t3").animate({right: "200px"}, 2000).animate({right: "2px"}, 2000);
