test with my own code after keeping only canvas elem

--- a/index.html
+++ b/index.html
@@ -111,63 +111,67 @@
         init.onclick = function () {
           startup();
         };
+        
+        var ongoingTouches = [];
         function startup() {
-          var el = document.getElementsByTagName("canvas")[0];
-          el.addEventListener("touchstart", handleStart, false);
-          el.addEventListener("touchend", handleEnd, false);
-          el.addEventListener("touchcancel", handleCancel, false);
-          el.addEventListener("touchmove", handleMove, false);
-          log("initialized.");
-        } 
-        var ongoingTouches = []; 
-        function handleStart(evt) {
-          evt.preventDefault();
-          log("touchstart.");
-          var el = document.getElementsByTagName("canvas")[0];
-          var ctx = el.getContext("2d");
-          var touches = evt.changedTouches;      
+          var elem = document.getElementsByTagName('canvas')[0];
+          elem.addEventListener('touchstart', handleStart, false);
+          elem.addEventListener('touchend', handleEnd, false);
+          elem.addEventListener('touchcancel', handleCancel, false);
+          elem.addEventListener('touchmove', handleMove, false);
+          log('initialized');
+        }
+
+        function handleStart(e) {
+          e.preventDefault();
+          log('touchstart');
+          var elem = document.getElementsByTagName('canvas')[0];
+          var ctx = elem.getContext('2d');
+          var touches = e.changedTouches;
           for (var i = 0; i < touches.length; i++) {
-            log("touchstart:" + i + "...");
+            log("touchstart: " + i + " ...");
             ongoingTouches.push(copyTouch(touches[i]));
             var color = colorForTouch(touches[i]);
             ctx.beginPath();
-            ctx.arc(touches[i].pageX, touches[i].pageY, 4, 0, 2 * Math.PI, false);  // a circle at the start
+            ctx.arc(touches[i].pageX, touches[i].pageY, 4, 0, 2 * Math.PI, false);
             ctx.fillStyle = color;
             ctx.fill();
-            log("touchstart:" + i + ".");
+            log('touchstart: ' + i + '.');
           }
-        } 
-        function handleMove(evt) {
-          evt.preventDefault();
-          var el = document.getElementsByTagName("canvas")[0];
-          var ctx = el.getContext("2d");
-          var touches = evt.changedTouches;
+        }
+
+        function handleMove(e) {
+          e.preventDefault();
+          var elem = document.getElementsByTagName('canvas')[0];
+          var ctx = elem.getContext('2d');
+          var touches = e.changedTouches;
           for (var i = 0; i < touches.length; i++) {
             var color = colorForTouch(touches[i]);
             var idx = ongoingTouchIndexById(touches[i].identifier);
             if (idx >= 0) {
-              log("continuing touch "+idx);
+              log('continuing touch' + idx);
               ctx.beginPath();
-              log("ctx.moveTo(" + ongoingTouches[idx].pageX + ", " + ongoingTouches[idx].pageY + ");");
+              log('ctx.moveTo(' + ongoingTouches[idx].pageX + ', ' + ongoingTouches[idx].pageY + ');');
               ctx.moveTo(ongoingTouches[idx].pageX, ongoingTouches[idx].pageY);
-              log("ctx.lineTo(" + touches[i].pageX + ", " + touches[i].pageY + ");");
+              log('ctx.lineTo(' + touches[i].pageX + ', ' + touches[i].pageY + ');');
               ctx.lineTo(touches[i].pageX, touches[i].pageY);
               ctx.lineWidth = 4;
               ctx.strokeStyle = color;
               ctx.stroke();
-              ongoingTouches.splice(idx, 1, copyTouch(touches[i]));  // swap in the new touch record
-              log(".");
+              ongoingTouches.splice(idx, 1, copyTouch(touches[i])); // swap in the new touch record
+              log('.');
             } else {
-              log("can't figure out which touch to continue");
+              log('can not figure out which touch to continue');
             }
           }
-        } 
-        function handleEnd(evt) {
-          evt.preventDefault();
-          log("touchend");
-          var el = document.getElementsByTagName("canvas")[0];
-          var ctx = el.getContext("2d");
-          var touches = evt.changedTouches;
+        }
+
+        function handleEnd(e) {
+          e.preventDefault();
+          log('touchend');
+          var elem = document.getElementsByTagName('canvas')[0];
+          var ctx = elem.getContext('2d');
+          var touches = e.changedTouches;
           for (var i = 0; i < touches.length; i++) {
             var color = colorForTouch(touches[i]);
             var idx = ongoingTouchIndexById(touches[i].identifier);
@@ -177,21 +181,37 @@
               ctx.beginPath();
               ctx.moveTo(ongoingTouches[idx].pageX, ongoingTouches[idx].pageY);
               ctx.lineTo(touches[i].pageX, touches[i].pageY);
-              ctx.fillRect(touches[i].pageX - 4, touches[i].pageY - 4, 8, 8);  // and a square at the end
-              ongoingTouches.splice(idx, 1);  // remove it; we're done
+              ctx.fillRect(touches[i].pageX - 4, touches[i].pageY - 4, 8, 8);
+              ongoingTouches.splice(idx, 1); // remove it, we're done;
             } else {
-              log("can't figure out which touch to end");
+              log('can not figure out which touch to end');
             }
           }
-        } 
-        function handleCancel(evt) {
-          evt.preventDefault();
-          log("touchcancel.");
-          var touches = evt.changedTouches;
+        }
+
+        function handleCancel(e) {
+          e.preventDefault();
+          log('touchcanel');
+          var touches = e.changedTouches;
           for (var i = 0; i < touches.length; i++) {
-            ongoingTouches.splice(i, 1);  // remove it; we're done
+            ongoingTouches[i].splice(i, 1); // remove it, we're done
           }
-        } 
+        }
+
+        function ongoingTouchIndexById(idToFind) {
+          for (var i = 0; i < ongoingTouches.length; i++) {
+            var id = ongoingTouches[i].identifier;
+            if (id == idToFind) {
+              return i; 
+            }
+          }
+          return -1;
+        }
+
+        function copyTouch(touch) {
+          return {identifier: touch.identifier, pageX: touch.pageX, pageY: touch.pageY};
+        }
+
         function colorForTouch(touch) {
           var r = touch.identifier % 16;
           var g = Math.floor(touch.identifier / 3) % 16;
@@ -200,141 +220,14 @@
           g = g.toString(16); // make it a hex digit
           b = b.toString(16); // make it a hex digit
           var color = "#" + r + g + b;
-          log("color for touch with identifier " + touch.identifier + " = " + color);
+          log('color for touch with identifier ' + touch.identifier + " = " + color);
           return color;
-        } 
-        function copyTouch(touch) {
-          return { identifier: touch.identifier, pageX: touch.pageX, pageY: touch.pageY };
-        } 
-        function ongoingTouchIndexById(idToFind) {
-          for (var i = 0; i < ongoingTouches.length; i++) {
-            var id = ongoingTouches[i].identifier;
-            if (id == idToFind) {
-              return i;
-            }
-          }
-          return -1;    // not found
-        } 
+        }
+
         function log(msg) {
           var p = document.getElementById('log');
-          p.innerHTML = msg + "\n" + p.innerHTML;
+          p.innerHTML = msg + '\n' + p.innerHTML;
         }
-        // var ongoingTouches = [];
-        // function startup() {
-        //   var elem = document.getElementsByTagName('canvas')[0];
-        //   elem.addEventListener('touchstart', handleStart, false);
-        //   elem.addEventListener('touchend', handleEnd, false);
-        //   elem.addEventListener('touchcancel', handleCancel, false);
-        //   elem.addEventListener('touchmove', handleMove, false);
-        //   log('initialized');
-        // }
-
-        // function handleStart(e) {
-        //   e.preventDefault();
-        //   log('touchstart');
-        //   var elem = document.getElementsByTagName('canvas')[0];
-        //   var ctx = elem.getContext('2d');
-        //   var touches = e.changedTouches;
-        //   for (var i = 0; i < touches.length; i++) {
-        //     log("touchstart: " + i + " ...");
-        //     ongoingTouches.push(copyTouch(touches[i]));
-        //     var color = colorForTouch(touches[i]);
-        //     ctx.beginPath();
-        //     ctx.arc(touches[i].pageX, touches[i].pageY, 4, 0, 2 * Math.PI, false);
-        //     ctx.fillStyle = color;
-        //     ctx.fill();
-        //     log('touchstart: ' + i + '.');
-        //   }
-        // }
-
-        // function handleMove(e) {
-        //   e.preventDefault();
-        //   var elem = document.getElementsByTagName('canvas')[0];
-        //   var ctx = elem.getContext('2d');
-        //   var touches = e.changedTouches;
-        //   for (var i = 0; i < touches.length; i++) {
-        //     var color = colorForTouch(touches[i]);
-        //     var idx = ongoingTouchIndexById(touches[i].identifier);
-        //     if (idx >= 0) {
-        //       log('continuing touch' + idx);
-        //       ctx.beginPath();
-        //       log('ctx.moveTo(' + ongoingTouches[idx].pageX + ', ' + ongoingTouches[idx].pageY + ');');
-        //       ctx.moveTo(ongoingTouches[idx].pageX, ongoingTouches[idx].pageY);
-        //       log('ctx.lineTo(' + touches[i].pageX + ', ' + touches[i].pageY + ');');
-        //       ctx.lineTo(touches[i].pageX, touches[i].pageY);
-        //       ctx.lineWidth = 4;
-        //       ctx.strokeStyle = color;
-        //       ctx.stroke();
-        //       ongoingTouches.splice(idx, 1, copyTouch(touches[i])); // swap in the new touch record
-        //       log('.');
-        //     } else {
-        //       log('can not figure out which touch to continue');
-        //     }
-        //   }
-        // }
-
-        // function handleEnd(e) {
-        //   e.preventDefault();
-        //   log('touchend');
-        //   var elem = document.getElementsByTagName('canvas')[0];
-        //   var ctx = elem.getContext('2d');
-        //   var touches = e.changedTouches;
-        //   for (var i = 0; i < touches.length; i++) {
-        //     var color = colorForTouch(touches[i]);
-        //     var idx = ongoingTouchIndexById(touches[i].identifier);
-        //     if (idx >= 0) {
-        //       ctx.lineWidth = 4;
-        //       ctx.fillStyle = color;
-        //       ctx.beginPath();
-        //       ctx.moveTo(ongoingTouches[idx].pageX, ongoingTouches[idx].pageY);
-        //       ctx.lineTo(touches[i].pageX, touches[i].pageY);
-        //       ctx.fillRect(touches[i].pageX - 4, touches[i].pageY - 4, 8, 8);
-        //       ongoingTouches.splice(idx, 1); // remove it, we're done;
-        //     } else {
-        //       log('can not figure out which touch to end');
-        //     }
-        //   }
-        // }
-
-        // function handleCancel(e) {
-        //   e.preventDefault();
-        //   log('touchcanel');
-        //   var touches = e.changedTouches;
-        //   for (var i = 0; i < touches.length; i++) {
-        //     ongoingTouches[i].splice(i, 1); // remove it, we're done
-        //   }
-        // }
-
-        // function ongoingTouchIndexById(idToFind) {
-        //   for (var i = 0; i < ongoingTouches.length; i++) {
-        //     var id = ongoingTouches[i].identifier;
-        //     if (id == idToFind) {
-        //       return i; 
-        //     }
-        //   }
-        //   return -1;
-        // }
-
-        // function copyTouch(touch) {
-        //   return {identifier: touch.identifier, pageX: touch.pageX, pageY: touch.pageY};
-        // }
-
-        // function colorForTouch(touch) {
-        //   var r = touch.identifier % 16;
-        //   var g = Math.floor(touch.identifier / 3) % 16;
-        //   var b = Math.floor(touch.identifier / 7) % 16;
-        //   r = r.toString(16); // make it a hex digit
-        //   g = g.toString(16); // make it a hex digit
-        //   b = b.toString(16); // make it a hex digit
-        //   var color = "#" + r + g + b;
-        //   log('color for touch with identifier ' + touch.identifier + " = " + color);
-        //   return color;
-        // }
-
-        // function log(msg) {
-        //   var p = document.getElementById('log');
-        //   p.innerHTML = msg + '\n' + p.innerHTML;
-        // }
       // })        
     </script>
   </body>
