--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-    <!-- <img id="background1" src="images/Birthday1.jpg" alt="1st background image">
+    <img id="background1" src="images/Birthday1.jpg" alt="1st background image">
     <header>
     <h1>
         <em>老爷子</em> 的生日Party
@@ -69,7 +69,7 @@
     <input type="submit" value="送祝福"> 
     </div>
     <br>
-    <footer>
+    <!-- <footer>
       2016年10月20日，于息县一桥英伦小镇，正午12时，众子女、(外)孙儿孙女
     </footer> -->
 
