move canvas elem before footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
   </head>
   <body>
-    <img id="background1" src="images/Birthday1.jpg" alt="1st background image">
+
+      <img id="background1" src="images/Birthday1.jpg" alt="1st background image">
     <header>
     <h1>
         <em>老爷子</em> 的生日Party
@@ -69,9 +70,6 @@
     <input type="submit" value="送祝福"> 
     </div>
     <br>
-    <!-- <footer>
-      2016年10月20日，于息县一桥英伦小镇，正午12时，众子女、(外)孙儿孙女
-    </footer> -->
 
     <canvas id="canvas" width="600" height="600" style="border: 1px solid blue;">
       Your browser does not support canvas element.
@@ -80,6 +78,13 @@
     <button id="init">Initialize</button>
     <br>
     Log: <pre id="log" style="border: 1px solid #ccc;"></pre>
+    <br>
+    
+    <footer>
+      2016年10月20日，于息县一桥英伦小镇，正午12时，众子女、(外)孙儿孙女
+    </footer>
+
+
 
     <script type="text/javascript">
       // $(function(){
