--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-<!--       <img id="background1" src="images/Birthday1.jpg" alt="1st background image">
+      <img id="background1" src="images/Birthday1.jpg" alt="1st background image">
     <header>
     <h1>
         <em>老爷子</em> 的生日Party
@@ -28,7 +28,7 @@
     
     <img id="background3" src="images/cake2.jpg" alt="3rd background image"> 
     <br>
-     -->
+    
 
 <!--     <div id="table">
     <div id="tr">
