--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
     </header>
 
-<!--     <div id="table">
+    <div id="table">
     <div id="tr">
     <div id="t1" class="tc">
         寿 比 南 山
@@ -65,7 +65,7 @@
     <textarea name="wishes" rows="1" cols="36"></textarea><br>
     <input type="submit" value="送祝福"> 
     </div>
-    <br> -->
+    <br>
 
     <footer>
       2016年10月20日，于息县一桥英伦小镇，正午12时，众子女、(外)孙儿孙女
