comment out images in the main

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       <div id="description">
       <p>今天是农历贰零壹陆年九月贰拾日，老爷子的陆拾大寿生日。众多小家伙们聚在了一起，首席大厨周彩琴，经过一上午的精心烹煮，香飘飘的菜已经准备出锅。寿星正在停港田，准备来主持生日宴。</p>
       经典时刻<br>
-      <img src="images/ba.jpg" alt="丹丹的照片">
+<!--       <img src="images/ba.jpg" alt="丹丹的照片">
       <img src="images/cut.jpg" alt="康康的照片">
       <img src="images/food.jpg" alt="帅豪的照片">
-      <img src="images/cake4.jpg" alt="祥祥的照片">
+      <img src="images/cake4.jpg" alt="祥祥的照片"> -->
       </div>
       <div id="request">
       送上你的祝福吧，在下面输入你的洋洋洒洒的文采之词
