comment out video elem

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <div id="main" class="tc">
       <h2>今天， 一个重大的日子<p id="number"></p>
       </h2>
-      <video id="party" src="images/birthday.mp4" controls muted width="200" height="300">
+<!--       <video id="party" src="images/birthday.mp4" controls muted width="200" height="300">
         <track kind=subtitles src=text.vtt srclang=en label="English">
-      </video>
+      </video> -->
       <div id="description">
       <p>今天是农历贰零壹陆年九月贰拾日，老爷子的陆拾大寿生日。众多小家伙们聚在了一起，首席大厨周彩琴，经过一上午的精心烹煮，香飘飘的菜已经准备出锅。寿星正在停港田，准备来主持生日宴。</p>
       经典时刻<br>
