comment out input elem

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     </div>
 
     <div id="wishes">
-    <textarea name="wishes" rows="1" cols="36"></textarea><br>
-    <input type="submit" value="送祝福"> 
+<!--     <textarea name="wishes" rows="1" cols="36"></textarea><br>
+    <input type="submit" value="送祝福">  -->
     </div>
     <br>
 
