--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         background-color: green;
         border-radius: 50%;
       }
+      @media (max-width: 600px) {
+        #canvas {
+          display: none;
+        }
+      }
     </style>
     <!-- <link rel="stylesheet" href="birthday.css"> -->
 
