--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         background-color: green;
         border-radius: 50%;
       }
-      @media (max-width: 600px) {
+      @media (min-width: 600px) {
         #canvas {
           display: none;
         }
