--- a/index.html
+++ b/index.html
@@ -4,23 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>生日Party</title>
+    <link media="(max-width: 800px)" rel="stylesheet" type="text/css" href="ball.css">
     <style type="text/css">
-      .garden {
-        position: relative;
-        width: 200px;
-        height: 200px;
-        border: 5px solid #ccc;
-        border-radius: 10px;
-      }
-      .ball {
-        position: absolute;
-        top: 90px;
-        left: 90px;
-        width: 20px;
-        height: 20px;
-        background-color: green;
-        border-radius: 50%;
-      }
       @media (min-width: 600px) {
         #canvas {
           display: none;
