--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>生日Party</title>
     <link media="(max-width: 800px)" rel="stylesheet" type="text/css" href="ball.css">
     <style type="text/css">
-      @media (min-width: 600px) {
+      @media (min-width: 800px), handheld and (orientation: portrait) {
         #canvas {
           display: none;
         }
